# stuinfo_assignment_2019

./: CMakeLists.txt  README.md  main.cpp  student.cpp  student.h
sorm/: context.h  indexer.cpp  indexer.h  mapper.h  model.cpp  model.h  query.h
